<resources>
    <string name="app_name">Module_OAUTH2</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="sign_out">Sign Out</string>
    <string name="notify">Notify</string>
    <string name="add">Add</string>
    <string name="show">Show</string>
    <string name="more">More</string>
    <string name="clear">Clear</string>
    <string name="product">Product</string>
    <string name="price">Price</string>
    <string name="sign_in_failure">Sorry, connection is bad!</string>
</resources>
